--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -912,7 +912,7 @@ header button {
 	cursor: pointer;
 }
 
-.footer #contacts #map_canvas {
+.footer #map_canvas {
 	height: 400px;
 	width: 100%;
 }
