--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -208,10 +208,20 @@ header button {
 
 .block-1 div ul li {
 	float: left;
+	display: block;
+	width: 20%;
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 18px;
-	margin: 30px 31px 30px 31px;
+	text-align: right;
+}
+
+.block-1 div ul {
+	padding: 20px 0px;
+}
+
+.block-1 div ul li p {
 	text-align: center;
+	display: inline-block;
 }
 
 .block-1 div ul li:first-child {
@@ -219,27 +229,27 @@ header button {
 }
 
 .block-1 div ul li:last-child {
-	margin-right: 0;
+	margin-right: -10px;
 }
 
 .block-1 div ul li:nth-child(1) {
-	padding: 10px 0px 10px 90px;
-	background: url(../img/icon-1-1.png) no-repeat 0 19px;
+	padding: 10px 0px 10px 5%;
+	background: url(../img/icon-1-1.png) no-repeat 17% 19px;
 }
 
 .block-1 div ul li:nth-child(2) {
-	padding: 10px 0px 10px 66px;
-	background: url(../img/icon-1-4.png) no-repeat 0 12px;
+	padding: 10px 0px 10px 5%;
+	background: url(../img/icon-1-4.png) no-repeat 28% 12px;
 }
 
 .block-1 div ul li:nth-child(3) {
-	padding: 10px 0px 10px 66px;
-	background: url(../img/icon-1-2.png) no-repeat 0 14px;
+	padding: 10px 0px 10px 5%;
+	background: url(../img/icon-1-2.png) no-repeat 30% 14px;
 }
 
 .block-1 div ul li:nth-child(4) {
-	padding: 10px 0px 10px 60px;
-	background: url(../img/icon-1-3.png) no-repeat 0 14px;
+	padding: 10px 3% 10px 2%;
+	background: url(../img/icon-1-3.png) no-repeat 23% 14px;
 }
 
 .block-1 div ul:after {
