--- a/aquaclean/css/rangeslider.css
+++ b/aquaclean/css/rangeslider.css
@@ -1,14 +1,10 @@
 .rangeslider,
 .rangeslider__fill {
-  background: #e6e6e6;
+  background: #EFFBFF;
   display: block;
   height: 20px;
   width: 100%;
-  -moz-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.3);
   box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.3);
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
   border-radius: 10px;
 }
 
@@ -22,7 +18,7 @@
 }
 
 .rangeslider__fill {
-  background: #00ff00;
+  background: #95BDC9;
   position: absolute;
   top: 0;
 }
