--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -607,12 +607,12 @@ header button {
 	left: -46px;
 	font-size: 24px;
 	text-align: center;
-	color:#2085aa;
+	color: #587F8B;
 	font-weight: 700;
 	font-family: 'PT Sans', sans-serif;
-	background: #a6d3e3;
-	border:1px solid #2085aa;
-	border-radius:50%;
+	background: #CFEEF7;
+	border: 1px solid #82BECB;
+	border-radius: 50%;
 	width: 32px;
 	line-height: 1;
 	padding: 4px 0;
