--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -191,7 +191,7 @@ header button {
   text-align: right;
 }
 .block-1 div ul {
-  padding: 20px 0px;
+  padding: 35px 0px;
 }
 .block-1 div ul li p {
   text-align: center;
@@ -313,7 +313,8 @@ header button {
   color: #4a7940
 }
 .block-3 {
-  margin-bottom: 60px;
+  margin: 0 0 40px 0;
+  padding: 20px 0;
 }
 .block-3 h1 {
   font-size: 32px;
@@ -378,7 +379,9 @@ header button {
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.14);
 }
 .block-4 {
-  margin-bottom: 30px;
+  margin: 0 0 40px 0;
+  padding: 20px 0;
+  background: #F6F6F6;
 }
 .block-4 h1 {
   font-size: 32px;
@@ -470,14 +473,15 @@ header button {
 }
 .block-4 .wrapper button {
   display: block;
-  margin: 0 auto;
+  margin: 0px auto 0;
 }
 .block-5 {
-  padding: 0px 0 40px 0;
+  padding: 20px 0;
+  margin: 0 0 40px 0;
 }
 .block-5 h1 {
   text-align: center;
-  padding: 20px 0px;
+  padding: 0 0 20px 0px;
 }
 .block-5 .howdo-list{
   margin: 0px 0 0 90px;
@@ -539,9 +543,9 @@ header button {
   color:#222222;
 }
 .block-6 {
-  margin-bottom: 45px;
+  margin-bottom: 40px;
   background: #f6f6f6;
-  padding: 20px 0 20px 0;
+  padding: 20px 0;
 }
 .block-6 h1 {
   font-size: 32px;
@@ -560,7 +564,8 @@ header button {
   color: #4a7940;
 }
 .block-7 {
-  margin: 0 0 30px 0;
+  margin: 0 0 80px 0;
+  padding: 20px 0;
 }
 .block-7 h1 {
   font-size: 32px;
@@ -597,12 +602,11 @@ header button {
   clear: both;
   position: relative;
   top: 30px;
-  margin: 0 0 80px 0;
 }
 .block-8 {
-  margin-bottom: 40px;
+  margin: 0 0 40px 0;
   background: #f6f6f6;
-  padding: 15px 0 40px 0;
+  padding: 20px 0;
 }
 .block-8 h1 {
   font-size: 32px;
@@ -646,7 +650,8 @@ header button {
   border-bottom: solid 1px #587F8B;
 }
 .block-9 {
-  margin-bottom: 60px
+  margin: 0 0 40px 0;
+  padding: 20px 0;
 }
 .block-9 h1 {
   font-size: 32px;
@@ -691,7 +696,7 @@ header button {
   color: #7c8f94;
   background: #effbff;
   height: 328px;
-  margin-bottom: 60px;
+  margin: 0 0 40px 0;
 }
 .block-call .wrapper > div:first-child {
   width: 66%;
@@ -727,7 +732,8 @@ header button {
   right: 60px;
 }
 .block-10 {
-  margin-bottom: 60px;
+  margin: 0 0 60px 0;
+  padding: 20px 0;
 }
 .block-10 h1 {
   font-size: 32px;
@@ -841,7 +847,9 @@ header button {
   background-position: center -270px;
 }
 .block-11 {
-  padding: 10px 0 40px 0 
+  padding: 20px 0;
+  margin: 0 0 40px 0;
+  background: #EFFBFF;
 }
 .block-11 .rangeCount {
   width: 33%;
@@ -866,7 +874,8 @@ header button {
   padding: 0 75px 0 0;
 }
 .program {
-  padding-bottom: 40px;
+  padding: 20px;
+  margin: 0 0 40px 0;
 }
 .program h1 {
   font-size: 32px;
@@ -881,7 +890,7 @@ header button {
 }
 .program .table {
   width: 900px;
-  margin: 0px 50px;
+  margin: 320px 50px 0 50px;
   font-family: 'Roboto Condensed', sans-serif;
   border-radius: 10px;
   overflow: hidden;
@@ -1020,10 +1029,12 @@ header button {
 }
 .footer > h1 {
   text-align: center;
-  margin: 55px 0 35px 0;
+  margin: 55px 0 40px 0;
+  padding: 0 0 0px 0;
+  font-size: 32px;
 }
 .footer > p {
-  margin: 14px 0 0 0;
+  margin: 30px 0 0 0;
   text-align: center;
   font-size: 17px;
   color: rgb(99, 165, 187);
@@ -1036,9 +1047,10 @@ header button {
 .footer .contacts {
   background: #f6f6f6;
   padding: 0 0 20px 0;
+  margin: -10px 0 0 0;
 }
 .footer .wrapper {
-  margin: 35px auto 50px auto;
+  margin: 0px auto 50px;
 }
 .footer div.logo {
   padding: 25px 0 0 0;
