--- a/profit/css/main.css
+++ b/profit/css/main.css
@@ -168,7 +168,7 @@ nav ul li a:hover {
 .directions {
   padding: 40px 0 0 0;
   background: #fffaf7 url(../img/block-3-bg.jpg) no-repeat right bottom;
-  background-size: contain;
+  background-size: cover;
 }
 .directions h4 {
   font-weight: 400;
@@ -300,68 +300,6 @@ nav ul li a:hover {
   background: url(../img/close.png) 0 0 no-repeat;
   cursor: pointer;
 }
-
-
-/*animation of block direction
-.directions .direction.detailed {
-  z-index: 999;
-  animation-name: itemCanvas;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-}
-.directions .row .direction.detailed .title {
-  animation-name: itemTitle;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-}
-.directions .direction.detailed .img {
-  display: inline-block;
-  height: 100%;
-  margin: 0;
-  position: absolute;
-}
-.directions .direction.detailed img {
-  width: inherit;
-  animation-name: itemImg;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-}
-.directions .direction.detailed .detail {
-  display: none;
-}
-.directions .direction.detailed .desc {
-  display: block;
-  animation-name: itemDesc;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-  animation-delay: 1.4s;
-}
-@keyframes itemImg {
-  100% {
-    height: 100%;
-  }
-}
-@keyframes itemDesc {
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes itemTitle {
-  100% {
-    position: absolute;
-    top: -10px;
-    left: 60%;
-  }
-}
-@keyframes itemCanvas {
-  0% {
-    width: 0%;
-
-  }
-  100% {
-    width: 100%;
-  }
-}*/
 .schedule {
   background: #4b4c4e url(../img/block-4-bg.jpg) no-repeat center bottom;
 }
@@ -491,8 +429,12 @@ footer .copy p {
   width: 40px;
   height: 40px;
   opacity: 0.6;
-
 }
 #main .arrow:hover {
   opacity: 0.8;
+}
+@media screen and (max-width: 1400px) {
+  .get-start {
+    margin: 12% auto 0;
+  }
 }
