adaptiv get start

--- a/profit/css/main.css
+++ b/profit/css/main.css
@@ -435,6 +435,6 @@ footer .copy p {
 }
 @media screen and (max-width: 1400px) {
   .get-start {
-    margin: 12% auto 0;
+    margin: 12% auto 0!important;
   }
 }
