--- a/profit/css/main.css
+++ b/profit/css/main.css
@@ -126,7 +126,7 @@ nav ul li a:hover {
   float: left;
   font-size: 30px;
   font-weight: 400;
-  margin: 0 79px 0 0;
+  margin: 0 8.4% 0 0;
   padding: 5px 10px;
   cursor: pointer;
   color: #fff;
