--- a/portfolioForJohn/css/style.css
+++ b/portfolioForJohn/css/style.css
@@ -1,93 +1,96 @@
 * {
-	padding: 0;
-	margin: 0;
-	border: none;
-	outline: none;
+  padding: 0;
+  margin: 0;
+  border: none;
+  outline: none;
 }
 
 a { 
-	text-decoration: none;
+  text-decoration: none;
 }
 
 ul {
-	list-style: none;
+  list-style: none;
 }
 
 p, span, h1, h2, h3 {
-	cursor: default;
+  cursor: default;
 }
 
 body {
-	background: #121417;
-	font-family: Arial, sans-serif;
-	font-size: 16px;
-	color: #b8b8b8;
+  background: #121417;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  color: #b8b8b8;
 }
 
 h1, h2, h3, h4, h5 {
-	font-family: 'Raleway', Arial, sans-serif;
-	font-weight: 400;
-	font-size: 26px;
-	color: #dcdcdc;
+  font-family: 'Raleway', Arial, sans-serif;
+  font-weight: 400;
+  font-size: 26px;
+  color: #dcdcdc;
 }
 
 .uselectable {
-	-moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none;
-	user-select: none;
+  -moz-user-select: none; 
+  -webkit-user-select: none; 
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .wrapper {
-	max-width: 1200px;
-	margin: 0 auto;
-	position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+  position: relative;
 }
 
 .wrapper:after {
-	display: block;
-	content: '';
-	clear: both;
+  display: block;
+  content: '';
+  clear: both;
 }
 
 .wrapper header {
-	width: 100%;
-	height: 600px;
-	background: #e7c4a4 url(../img/bg-header.jpg) no-repeat;	
+  position: relative;
+  width: 100%;
+  height: 600px;
+  background: #e7c4a4 url(../img/bg-header.jpg) no-repeat;  
 }
 
 .wrapper header .about {
-	padding: 20px 25px;
-	width: 21%;
-	height: 600px;
-	background: rgba(11, 22, 32, 0.88);
-	text-align: center;
+  padding: 20px 25px;
+  width: 21%;
+  height: 600px;
+  background: rgba(11, 22, 32, 0.88);
+  text-align: center;
   overflow: auto;
 }
 
 .wrapper header .about .avatar {
-	border-radius: 50%;
-	display: block;
-	margin: 0px auto;
-	padding: 50px 0 25px 0;
+  border-radius: 50%;
+  display: block;
+  margin: 0px auto;
+  padding: 50px 0 25px 0;
 }
 
 .wrapper header .about h1 {
-	padding: 0 0 30px 0;
+  margin: 0 0 10px 0;
 }
 
 .wrapper header .about p {
-	text-align: center;
+  text-align: center;
+  line-height: 24px;
+  padding: 0 20px;
 }
 
 .wrapper header menu {
-	position: absolute;
-	top: 25px;
-	right: 25px;
-	background: url(../img/menu.png) no-repeat;
-	width: 24px;
-	height: 20px;
-	cursor: pointer;
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  background: url(../img/menu.png) no-repeat;
+  width: 24px;
+  height: 20px;
+  cursor: pointer;
 }
 
 .images:after {
@@ -97,12 +100,12 @@ h1, h2, h3, h4, h5 {
 }
 
 .images figure.effect-ruby {
-	overflow: hidden;
-	width: 33.33333%;
-	height: 33.33333%;
-	float: left;
-	cursor: pointer;
-	position: relative;
+  overflow: hidden;
+  width: 33.33333%;
+  height: 33.33333%;
+  float: left;
+  cursor: pointer;
+  position: relative;
   background: #98C2B0;;
 }
 
@@ -112,8 +115,8 @@ figure.effect-ruby {
 }
 
 .images figure.effect-ruby img {
-	display: block;
-	width: 100%;	
+  display: block;
+  width: 100%;  
 }
 
 .images figure.effect-ruby img {
@@ -125,15 +128,15 @@ figure.effect-ruby {
 }
 
 .images figure.effect-ruby figcaption {
-	width: 80%;
-	height: 100%;
-	opacity: 0;
-	position: absolute;
-	top: 0;
-	padding: 19% 10% 0 10%;
-	text-align: center;
-	background: transparent;
-	color: #dddddd;
+  width: 80%;
+  height: 100%;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  padding: 19% 10% 0 10%;
+  text-align: center;
+  background: transparent;
+  color: #dddddd;
   cursor: pointer;
   -webkit-transition-duration: 0.35s;
   transition-duration: 0.35s;
@@ -171,11 +174,12 @@ figure.effect-ruby {
 }
 
 .images figure.effect-ruby figcaption p {
+  font-size: 26px;
   font-family: 'Raleway', Arial, sans-serif;
   font-weight: 400;
-  border: solid 1px #fff;
+  border-top: solid 1px #fff;
   margin-top: 10px;
-  padding: 10px 10px;
+  padding: 15px 10px;
   cursor: pointer;
   -webkit-transform: scale(0.7);
   transform: scale(0.7);
@@ -201,27 +205,67 @@ figure.effect-ruby:hover img, figure.effect-ruby.hover img {
   -webkit-transform: scale(1.15);
   transform: scale(1.15)
 }
-
+.info h1 {
+  text-align: left;
+  padding: 0 0 18px 0;
+  border-bottom: solid 1px #fff;
+}
 .wrapper .info {
-  text-align: center;
-  padding: 5% 12%;
+  padding: 1% 20% 5%;
   clear: both;
 }
 
 .wrapper .info p {
-  padding: 40px 0 0 0;
-  text-align: left;
+  padding: 20px 0 0 0;
+}
+.info p a {
+  color: hsl(205, 100%, 57%);
+}
+.info p a.follow {
+  display: inline-block;
+  border-radius: 5px;
+  font-size: 18px;
+  width: 237px;
+  height: 30px;
+  padding: 0 20px 0 0;
+  line-height: 30px;
+  text-align: right;
+  background: #eee url(../img/twitter.png) 8% center no-repeat;
+  color: #333;
+  background-size: 9%;
+  /* font-weight: 600; */
 }
 
 .wrapper footer {
   text-align: center;
   border-top: 1px #dddddd solid;
-  padding: 30px 10px 30px 10px;
+  padding: 30px 10px 20px 10px;
+}
+.wrapper footer nav {
+  text-align: left;
+}
+.wrapper footer nav li {
+  display: inline-block;
+  padding: 0 30px 0 10px;
+  background: url(../img/footer-nav-sep.png) right center no-repeat;
+}
+.wrapper footer nav li:last-child {
+  padding-right: 0;
+  background: 0;
+}
+.wrapper footer nav a {
+  display: block;
+  color: #fff;
+  opacity: .8;
+}
+.wrapper footer nav a:hover {
+  opacity: 1;
 }
 
 .wrapper footer p {
   position: relative;
   font-size: 14px;
+  padding: 20px 0 0 0;
 }
 
 .wrapper footer p span {
@@ -234,6 +278,7 @@ figure.effect-ruby:hover img, figure.effect-ruby.hover img {
   background: url(../img/webbber.png) no-repeat;
   width: 67px;
   height: 17px;
+
 }
 
 @media screen and (max-width: 880px) {
@@ -278,7 +323,7 @@ figure.effect-ruby:hover img, figure.effect-ruby.hover img {
 }
 
 @media screen and (max-width: 610px) and (min-width: 400px) {
-  
+
   .wrapper .images figure.effect-ruby figcaption {
     padding-top: 18%; 
   }
@@ -292,7 +337,7 @@ figure.effect-ruby:hover img, figure.effect-ruby.hover img {
 }
 
 @media screen and (max-width: 540px) and (min-width: 400px) {
-  
+
 
   .wrapper .images figure.effect-ruby figcaption {
     padding-top: 10%; 
