--- a/decraft/media/css/main.css
+++ b/decraft/media/css/main.css
@@ -54,6 +54,9 @@ header nav a {
 header nav a:hover {
   border-top: solid 2px #8A6C6B;
 }
+header nav a.active {
+  border-top: solid 2px #8A6C6B!important;
+}
 .wrapper {
   width: 1140px;
   margin: 0 auto;
@@ -119,7 +122,7 @@ header nav a:hover {
 }
 #catalog {
   background: #eaedf1;
-}
+} 
 #catalog .card .card-image {
   position: relative;
   cursor: pointer;
@@ -162,7 +165,7 @@ header nav a:hover {
 }
 
 #advantages {
-  background: #66D9D4 url(../img/certificate-bg.png) no-repeat;
+  background: #66D9D4;
 }
 #advantages h2 {
   color: #fff;
@@ -225,6 +228,9 @@ header nav a:hover {
 #comments {
   background: #eaedf1;
 }
+#comments .row {
+  margin: 0; 
+}
 #comments .col {
   position: relative;
 }
@@ -259,7 +265,17 @@ header nav a:hover {
   background: url(../../media/img/avatar4.png);
 }
 #footer {
-  background: #333636;
+  background: #e9e9e9;
+}
+#footer .logo {
+  height: 100px;
+  padding: 10px 0;
+}
+#footer .container:first-of-type p {
+  padding:  10px 0;
+}
+#footer img {
+  height: 100%
 }
 #footer .copy {
   background: #f0f0f0;
