--- a/decraft/media/css/main.css
+++ b/decraft/media/css/main.css
@@ -5,6 +5,9 @@ input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
   -webkit-text-fill-color: #fff!important;
 }
+a {
+  color: #21BDB6;
+}
 h2 {
   color: #333636;
   font-size: 40px;
@@ -31,7 +34,10 @@ header .info p {
   margin: 10px 0;
   color: #8A6C6B;
 }
-header .info i {
+header .info a {
+  font-size: 22px;
+}
+header .info i, #footer i {
   position: relative;
   top: 4px;
   right: 10px;
@@ -41,7 +47,7 @@ header nav {
   box-shadow: 0 3px 3px 0 rgba(0,0,0,0.16);
 }
 header nav {
-  height: 50px;
+  height: auto;
   line-height: 50px;
   background-color: #F7F7F7;
   letter-spacing: 1px;
@@ -53,6 +59,7 @@ nav ul li  {
   float: none;
   display: inline-block;
   margin: 0 10px;
+  /* height: 50px; */
 }
 header nav a {
   color: #757575;
@@ -82,8 +89,9 @@ header nav a.active {
   height: 100%;
 }
 .logo a img {
-  display: block;
-  height: 100%;
+  display: inline-block;
+  height: 84%;
+  margin: 6px 0 0 0;
 }
 #slider {
   position: relative;
@@ -314,5 +322,68 @@ header nav a.active {
 .copy p {
   color: #CCCCCC;
   font-size: 13px;
-  line-height: 25px;
+  line-height: 17px;
+}
+
+@media only screen and (max-width: 601px) {
+  .scenter {
+    text-align: center;
+  }
+  .scenter > * {
+    float: none !important;
+    display: block !important;
+    margin: 10px auto !important;
+  }
+  .scenters {
+    float: none !important;
+    display: block !important;
+    margin: 10px auto !important;
+  }
+  .valign-wrapper {
+    display: block !important;
+  }
+  #slider .desc {
+    top: 15px;
+  }
+  #slider .desc p:nth-of-type(1) {
+    font-size: 29px;
+    line-height: 54px;
+    text-align: center;
+  }
+  #slider .desc p:nth-of-type(2), #slider .desc p:nth-of-type(3) {
+    font-size: 44px;
+    line-height: 41px;
+    text-align: center;
+    padding: 0;
+  }
+  #slider .desc p span {
+    font-size: 96px;
+    font-weight: 700;
+    line-height: 87px;
+    display: block;
+    margin: 0;
+  }
+}
+
+.button-collapse i {
+  font-size: 40px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 9;
+  padding: 10px;
+  background-color: white;
+}
+
+#modal1 {
+  max-width: 500px;
+  max-height: 100%;
+}
+#modal1 .row {
+  margin-bottom: 0;
+}
+#modal1 .row button.btn {
+  float: none;
+  margin-bottom: 18px;
+  top: 4%;
 }
